# schengen-server

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
src/: config.rs  ei.rs  main.rs  portal.rs  server.rs
