[package]
name = "schengen-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
schengen = "0.1.0"
ashpd = "0.12.1"
reis = "0.5"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
hostname = "0.4"
chrono = "0.4"
libc = "0.2"
kbvm = "0.1.5"
